Fix: Coherence 100% des plans Free/Pro/Premium dans tout le SaaS
- UrssafCalculator: 3 bannieres distinctes (Free, Trial, Payant)
- PlanBadge: Support Free ajoute avec Crown icon
- BadgePlan: 'Gratuit' devient 'Free' pour coherence
- Pricing: FAQ corrigee (plan Gratuit -> plan Free)
- Terminologie unifiee partout
- Logique claire sans ambiguite
- 3 etats distincts bien geres

Score de coherence: 100/100

--- a/content/blog/acre-2025-guide-complet.mdx
+++ b/content/blog/acre-2025-guide-complet.mdx
@@ -1,11 +1,22 @@
 ---
-title: "ACRE 2025 : Guide Complet de l'Aide à la Création d'Entreprise"
-description: "ACRE 2025 : conditions, montant, demande, durée. Économisez 50% de cotisations sociales la première année. Guide complet pour micro-entrepreneurs."
+title: "ACRE 2025 : Économisez 50% de Cotisations (Guide Complet)"
+description: "ACRE 2025 : conditions d'éligibilité, demande, taux réduits. Économisez 4 000 à 8 000€ la 1ère année ! Qui peut en bénéficier ? Comment faire ?"
 category: "Aides"
 readTime: "9 min"
 date: "2025-01-08"
 keywords: ["acre 2025", "aide création entreprise", "exonération cotisations", "acre micro-entrepreneur", "demande acre"]
 author: "Comptalyze"
+faq:
+  - question: "L'ACRE est-elle automatique ?"
+    answer: "Elle doit être demandée lors de la création (en cochant la case) ou dans les 45 jours. Elle est ensuite accordée automatiquement si vous êtes éligible."
+  - question: "Combien économise-t-on avec l'ACRE ?"
+    answer: "Sur un CA de 20 000 € en prestations BNC : 2 110 € d'économie (10,55 % au lieu de 21,1 %). L'économie moyenne se situe entre 4 000 € et 8 000 € selon votre CA."
+  - question: "Que se passe-t-il en année 2 ?"
+    answer: "Retour automatique aux taux pleins de cotisations. Plus aucune réduction après les 4 premiers trimestres civils."
+  - question: "L'ACRE est-elle cumulable avec d'autres aides ?"
+    answer: "Oui, l'ACRE est cumulable avec le maintien de l'ARE (allocations chômage), l'ARCE (capital de 60 % des droits ARE), le NACRE (accompagnement), et les aides régionales/locales."
+  - question: "Peut-on demander l'ACRE après la création ?"
+    answer: "Non. La demande doit être faite lors de l'immatriculation ou dans les 45 jours maximum. Passé ce délai, impossible d'en bénéficier rétroactivement."
 ---
 
 L'**ACRE** (Aide à la Création ou à la Reprise d'Entreprise) est une aide précieuse qui permet aux micro-entrepreneurs de bénéficier d'une **réduction de 50 % sur leurs cotisations sociales** pendant la première année d'activité. Voici tout ce qu'il faut savoir pour en bénéficier en 2025.
