--- a/content/blog/calculer-cotisations-urssaf-2025.mdx
+++ b/content/blog/calculer-cotisations-urssaf-2025.mdx
@@ -1,11 +1,22 @@
 ---
-title: "Comment Calculer ses Cotisations URSSAF en 2025 : Guide Pratique"
-description: "Calculez précisément vos cotisations URSSAF en micro-entreprise. Taux 2025, simulateur, exemples concrets et astuces pour anticiper vos charges sociales."
+title: "Calculer ses Cotisations URSSAF 2025 : Taux et Simulateur"
+description: "Calculez vos cotisations URSSAF en micro-entreprise : taux 2025 (12,3%, 21,1%, 21,2%), simulateur gratuit, exemples concrets. Guide complet avec ACRE."
 category: "URSSAF"
 readTime: "10 min"
 date: "2025-01-10"
 keywords: ["calculer cotisations urssaf", "taux urssaf 2025", "charges sociales micro-entrepreneur", "simulateur urssaf", "cotisations auto-entrepreneur"]
 author: "Comptalyze"
+faq:
+  - question: "Comment calculer mes cotisations si j'ai commencé en cours de mois ?"
+    answer: "Vous déclarez uniquement le CA encaissé à partir de votre date d'immatriculation. Si vous débutez le 15 mars, vous déclarez le CA du 15 au 31 mars."
+  - question: "Les cotisations sont-elles fixes ou variables ?"
+    answer: "Variables : elles sont proportionnelles à votre CA. Si vous n'encaissez rien, vous ne payez rien (déclaration à 0 € obligatoire)."
+  - question: "Puis-je déduire mes charges avant de calculer les cotisations ?"
+    answer: "Non. En micro-entreprise, les cotisations s'appliquent sur le CA brut encaissé, sans aucune déduction. C'est le principe du régime simplifié."
+  - question: "Dois-je payer des cotisations sur les remboursements de frais ?"
+    answer: "Non, si les frais sont facturés au montant exact et justifiés (ticket de péage, billet de train). En revanche, les indemnités kilométriques sont à inclure dans le CA."
+  - question: "Comment savoir si mon activité est BIC ou BNC ?"
+    answer: "BIC (Bénéfices Industriels et Commerciaux) : vente de produits, services commerciaux et artisanaux. BNC (Bénéfices Non Commerciaux) : professions libérales, prestations intellectuelles. En cas de doute, vérifiez sur votre avis SIRET."
 ---
 
 Calculer vos **cotisations URSSAF** en micro-entreprise est essentiel pour anticiper vos charges et gérer votre trésorerie. Ce guide vous explique comment calculer précisément vos cotisations sociales en 2025 avec des exemples concrets.
