--- a/content/blog/calendrier-fiscal-micro-entrepreneur-2025.mdx
+++ b/content/blog/calendrier-fiscal-micro-entrepreneur-2025.mdx
@@ -1,11 +1,22 @@
 ---
-title: "Calendrier Fiscal Micro-Entrepreneur 2025 : Toutes les Dates Clés"
-description: "Calendrier complet 2025 des déclarations URSSAF, impôts, CFE et TVA pour micro-entrepreneurs. Ne ratez aucune échéance importante avec notre guide."
+title: "Calendrier Fiscal 2025 : Dates Clés Micro-Entrepreneur"
+description: "Toutes les dates 2025 : URSSAF (mensuel/trimestriel), impôts (avril-juin), CFE (16/12). Échéances, pénalités, rappels. Ne ratez plus rien !"
 category: "Calendrier"
 readTime: "9 min"
 date: "2025-01-12"
 keywords: ["calendrier fiscal 2025", "déclaration urssaf dates", "micro-entrepreneur échéances", "dates limites urssaf", "calendrier auto-entrepreneur"]
 author: "Comptalyze"
+faq:
+  - question: "Que se passe-t-il si j'oublie une déclaration ?"
+    answer: "Déclarez-la dès que possible. Vous aurez peut-être une majoration de 52 €, mais c'est mieux que de laisser la situation s'aggraver."
+  - question: "Puis-je déclarer en avance ?"
+    answer: "Non, vous ne pouvez déclarer qu'à partir de l'ouverture de la période de déclaration, généralement quelques jours avant la date limite."
+  - question: "Comment changer de périodicité ?"
+    answer: "Sur votre espace URSSAF, rubrique Gérer mon auto-entreprise > Modifier ma périodicité. Demande à faire avant le 30 septembre pour une application au 1er janvier suivant."
+  - question: "La déclaration URSSAF se fait-elle automatiquement ?"
+    answer: "Non, même si votre CA est à 0 €, vous devez déclarer manuellement chaque mois ou trimestre."
+  - question: "Que faire si je rate la déclaration d'impôt ?"
+    answer: "Connectez-vous sur impots.gouv.fr et déclarez dès que possible. Une majoration sera appliquée, mais moins importante qu'en cas de non-déclaration prolongée."
 ---
 
 En tant que micro-entrepreneur, vous devez respecter plusieurs **échéances fiscales et sociales** tout au long de l'année. Ce calendrier complet 2025 recense toutes les dates importantes pour ne rien oublier et éviter les pénalités.
