--- a/content/blog/declaration-urssaf-micro-entrepreneur-2025.mdx
+++ b/content/blog/declaration-urssaf-micro-entrepreneur-2025.mdx
@@ -6,6 +6,17 @@ readTime: "12 min"
 date: "2025-01-15"
 keywords: ["déclaration urssaf", "micro-entrepreneur", "cotisations sociales", "auto-entrepreneur 2025", "urssaf en ligne", "calcul cotisations"]
 author: "Comptalyze"
+faq:
+  - question: "Dois-je déclarer les acomptes ou le CA total ?"
+    answer: "Vous déclarez le chiffre d'affaires encaissé, c'est-à-dire les sommes effectivement reçues, y compris les acomptes. Si vous facturez 1 000 € mais ne recevez qu'un acompte de 300 €, vous déclarez 300 €."
+  - question: "Peut-on modifier une déclaration après validation ?"
+    answer: "Non, une fois validée, la déclaration ne peut plus être modifiée. En cas d'erreur, contactez votre URSSAF pour régulariser. Pour les erreurs mineures, une correction sera possible lors de la déclaration suivante."
+  - question: "Les cotisations sont-elles déductibles ?"
+    answer: "Non, en micro-entreprise les cotisations sociales ne sont pas déductibles. L'abattement forfaitaire appliqué par l'administration fiscale (34 %, 50 % ou 71 % selon l'activité) est censé couvrir toutes vos charges, y compris les cotisations."
+  - question: "Que se passe-t-il si je dépasse les seuils ?"
+    answer: "En 2025, si vous dépassez les seuils de 188 700 € (vente) ou 77 700 € (services) pendant 2 années consécutives, vous basculez automatiquement au régime réel d'imposition l'année suivante."
+  - question: "Comment changer de périodicité de déclaration ?"
+    answer: "Pour passer de mensuel à trimestriel ou inversement, connectez-vous à votre espace URSSAF, allez dans Gérer mon auto-entreprise > Modifier ma périodicité. La demande doit être faite avant le 31 octobre pour être effective au 1er janvier suivant."
 ---
 
 La **déclaration URSSAF** est une obligation mensuelle ou trimestrielle pour tout micro-entrepreneur. Ce guide complet vous explique tout ce qu'il faut savoir pour déclarer et payer vos cotisations sociales en 2025 sans erreur.
