--- a/content/blog/facturation-micro-entrepreneur-2025.mdx
+++ b/content/blog/facturation-micro-entrepreneur-2025.mdx
@@ -1,11 +1,22 @@
 ---
-title: "Facturation Micro-Entrepreneur 2025 : Guide Complet et Mentions Obligatoires"
-description: "Tout savoir sur la facturation en micro-entreprise : mentions obligatoires, logiciels conformes, devis, numérotation, conservation. Guide complet 2025."
+title: "Facturation Micro-Entrepreneur 2025 : Mentions Obligatoires"
+description: "Factures conformes en micro-entreprise : 11 mentions obligatoires, numérotation, devis, conservation 10 ans, logiciels. Guide complet + modèles 2025."
 category: "Facturation"
 readTime: "11 min"
 date: "2025-01-14"
 keywords: ["facturation micro-entrepreneur", "mentions obligatoires facture", "logiciel facturation", "facture auto-entrepreneur 2025", "devis micro-entreprise"]
 author: "Comptalyze"
+faq:
+  - question: "Dois-je faire une facture pour un particulier < 25 € ?"
+    answer: "Non, ce n'est pas obligatoire, mais c'est recommandé pour votre comptabilité. Si le client le demande, vous devez la fournir."
+  - question: "Puis-je modifier une facture déjà envoyée ?"
+    answer: "Non. Si vous avez fait une erreur, vous devez émettre un avoir (annulation) puis une nouvelle facture corrigée."
+  - question: "Combien de temps le client a-t-il pour payer ?"
+    answer: "Vous définissez les conditions dans votre facture. Entre professionnels, le maximum légal est 60 jours à compter de la date d'émission."
+  - question: "Dois-je avoir un tampon ou un cachet ?"
+    answer: "Non, aucune obligation de tampon, cachet ou signature manuscrite sur les factures. Ces éléments sont facultatifs."
+  - question: "Puis-je facturer en euros seulement ?"
+    answer: "Oui, en France vous devez facturer en euros. Pour les clients étrangers dans l'UE, vous pouvez afficher une autre devise en complément, mais l'euro doit figurer."
 ---
 
 La **facturation** est une obligation légale pour tout micro-entrepreneur. Mais que doit contenir une facture conforme ? Quels sont vos droits et obligations ? Ce guide complet 2025 répond à toutes vos questions sur la facturation en micro-entreprise.
