Retire l'ensemble des parcours d'essai gratuit

--- a/content/blog/calculer-cotisations-urssaf-2025.mdx
+++ b/content/blog/calculer-cotisations-urssaf-2025.mdx
@@ -410,7 +410,7 @@ Avec Comptalyze, bénéficiez de :
         boxShadow: '0 4px 20px rgba(0, 208, 132, 0.3)'
       }}
     >
-      Essai gratuit 3 jours
+      Découvrir nos offres Premium
     </a>
     <a
       href="/pricing"
